crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@str__empty.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/str/empty.panda
---
Ok(
    Str(
        Str {
            s: "",
        },
    ),
)
