crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@str__str.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/str/str.panda
---
Ok(
    Str(
        Str {
            s: "hello world",
        },
    ),
)
